Clean up package.xml files to make rosdep happy

--- a/orca_filter/package.xml
+++ b/orca_filter/package.xml
@@ -16,7 +16,7 @@
 
     <buildtool_depend>ament_cmake</buildtool_depend>
 
-    <depend>Eigen3</depend>
+    <depend>eigen</depend>
     <depend>fiducial_vlam_msgs</depend>
     <depend>geometry_msgs</depend>
     <depend>image_geometry</depend>
