--- a/orca_description/package.xml
+++ b/orca_description/package.xml
@@ -17,6 +17,11 @@
     <buildtool_depend>ament_cmake</buildtool_depend>
     <buildtool_depend>xacro</buildtool_depend>
 
+    <test_depend>ament_lint_auto</test_depend>
+
+    <!-- This recursively depends on a set of common linters -->
+    <test_depend>ament_lint_common</test_depend>
+
     <depend>tf2</depend>
     <depend>urdf</depend>
 
