--- a/orca_shared/CMakeLists.txt
+++ b/orca_shared/CMakeLists.txt
@@ -6,21 +6,21 @@ project(orca_shared)
 #=============
 
 # Default to C99
-if (NOT CMAKE_C_STANDARD)
+if(NOT CMAKE_C_STANDARD)
   set(CMAKE_C_STANDARD 99)
-endif ()
+endif()
 
 # Default to C++14
-if (NOT CMAKE_CXX_STANDARD)
+if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
-endif ()
+endif()
 
 # Emulate colcon by providing paths to other projects in the workspace
-if ($ENV{CLION_IDE})
+if($ENV{CLION_IDE})
   set(astar_DIR "${PROJECT_SOURCE_DIR}/../../../install/astar/share/astar/cmake")
   set(fiducial_vlam_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/fiducial_vlam_msgs/share/fiducial_vlam_msgs/cmake")
   set(orca_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/orca_msgs/share/orca_msgs/cmake")
-endif ()
+endif()
 
 # Find packages
 find_package(ament_cmake REQUIRED)
@@ -88,6 +88,12 @@ ament_target_dependencies(
 #=============
 # Test
 #=============
+
+# This will load & run linters listed in package.xml
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
 
 add_executable(
   test_main
