Fix orca_gazebo ament_lint_common errors

--- a/orca_gazebo/CMakeLists.txt
+++ b/orca_gazebo/CMakeLists.txt
@@ -2,21 +2,21 @@ cmake_minimum_required(VERSION 3.5)
 project(orca_gazebo)
 
 # Default to C99
-if (NOT CMAKE_C_STANDARD)
+if(NOT CMAKE_C_STANDARD)
   set(CMAKE_C_STANDARD 99)
-endif ()
+endif()
 
 # Default to C++14
-if (NOT CMAKE_CXX_STANDARD)
+if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 14)
-endif ()
+endif()
 
 # Emulate colcon by providing paths to other projects in the workspace
-if ($ENV{CLION_IDE})
+if($ENV{CLION_IDE})
   set(orca_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/orca_msgs/share/orca_msgs/cmake")
   set(orca_shared_DIR "${PROJECT_SOURCE_DIR}/../../../install/orca_shared/share/orca_shared/cmake")
   set(sim_fiducial_DIR "${PROJECT_SOURCE_DIR}/../../../install/sim_fiducial/share/sim_fiducial/cmake")
-endif ()
+endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(gazebo REQUIRED)  # Note uppercase variables in /usr/lib/x86_64-linux-gnu/cmake/gazebo/gazebo-config.cmake
@@ -120,6 +120,12 @@ ament_export_dependencies(nav_msgs)
 ament_export_dependencies(orca_msgs)
 ament_export_dependencies(rclcpp)
 ament_export_dependencies(sensor_msgs)
+
+## Load & run linters listed in package.xml
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+endif()
 
 ## Install targets
 install(
